--- a/examples/showcase/index.html
+++ b/examples/showcase/index.html
@@ -3,7 +3,7 @@
     <head> 
         <title>markdown demo using leptos</title>
         <link data-trunk rel="rust" data-wasm-opt="s">
-        <link data-trunk rel="css" href="./markdown.css">
+        <!--<link data-trunk rel="css" href="./markdown.css"> -->
     </head>
     <body></body>
 </html>
