better styling for custom components example

--- a/examples/custom_component/index.html
+++ b/examples/custom_component/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>custom components in markdown</title>
+        <link data-trunk rel="rust" data-wasm-opt="s">
+        <link data-trunk rel="css" href="markdown.css">
     </head>
     <body>
     </body>
